--- a/drumkit.html
+++ b/drumkit.html
@@ -9,57 +9,98 @@
     </head>
     <body>
 
-        <div class="key">
-            <div onclick="playSound()">A</div>
+        <div class="key" onclick="playBoom()">
+            <div >A</div>
             <audio class="drumSet" id="boomSound" src="sounds/boom.wav"></audio>
         </div>
 
-        <div class="key">
-            <div onclick="playSound()">S</div>
+        <div class="key" onclick="playClap()">
+            <div>S</div>
             <audio class="drumSet" id="clapSound" src="sounds/clap.wav"></audio>
         </div>
 
-        <div class="key">
+        <div class="key" onclick="playHiHat()">
             <div>D</div>
+            <audio class="drumSet" id="hiHatSound" src="sounds/hihat.wav"></audio>
         </div>
 
-        <div class="key">
+        <div class="key" onclick="playKick()">
             <div>F</div>
+            <audio class="drumSet" id="kickSound" src="sounds/kick.wav"></audio>
         </div>
 
-        <div class="key">
+        <div class="key" onclick="playOpenHat()">
             <div>G</div>
+            <audio class="drumSet" id="openHatSound" src="sounds/openhat.wav"></audio>
         </div>
 
-        <div class="key">
+        <div class="key" onclick="playRide()">
             <div>H</div>
+            <audio class="drumSet" id="rideSound" src="sounds/ride.wav"></audio>
         </div>
 
-        <div class="key">
+        <div class="key" onclick="playSnare()">
             <div>J</div>
+            <audio class="drumSet" id="snareSound" src="sounds/snare.wav"></audio>
         </div>
 
-        <div class="key">
+        <div class="key" onclick="playTink()">
             <div>K</div>
+            <audio class="drumSet" id="tinkSound" src="sounds/tink.wav"></audio>
         </div>
 
-        <div class="key">
+        <div class="key" onclick="playTom()">
             <div>L</div>
+            <audio class="drumSet" id="tomSound" src="sounds/tom.wav"></audio>
         </div>
 
         
         
         <script>
-            function playSound() {
-                const sound = document.getElementsByClassName("drumSet");
+            function playBoom() {
+                const sound = document.getElementById("boomSound");
                 sound.play();
             }
 
-            // function playSound() {
-            //     const sound = document.getElementById("clapSound");
-            //     sound.play();
-            // }
+            function playClap() {
+                const sound = document.getElementById("clapSound");
+                sound.play();
+            }
 
+            function playHiHat() {
+                const sound = document.getElementById("hiHatSound");
+                sound.play();
+            }
+
+            function playKick() {
+                const sound = document.getElementById("kickSound");
+                sound.play();
+            }
+
+            function playOpenHat() {
+                const sound = document.getElementById("openHatSound");
+                sound.play();
+            }
+
+            function playRide() {
+                const sound = document.getElementById("rideSound");
+                sound.play();
+            }
+
+            function playSnare() {
+                const sound = document.getElementById("snareSound");
+                sound.play();
+            }
+
+            function playTink() {
+                const sound = document.getElementById("tinkSound");
+                sound.play();
+            }
+
+            function playTom() {
+                const sound = document.getElementById("tomSound");
+                sound.play();
+            }
         </script>
     </body>
 
