--- a/drumkit.html
+++ b/drumkit.html
@@ -11,7 +11,7 @@
     </head>
     <body>
 
-        <div class="jumbotron-fluid">
+        <div class="jumbotron-fluid" id="keysContainer">
             <h1 class="display-4">Javascript Drum Set!</h1>
             <div class="d-flex justify-content-center">
                 <div class="key" onclick="playBoom()">
